Created html for car and displayed in top left corner #1

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,12 @@
 .background {
   background-color: rgb(2, 148, 2);
 }
+
+.container {
+  width: 256px;
+  height: 256px;
+}
+
+#f1-car-model {
+  width: 100%;
+}
